iso9960, exfat, fat: Corrected time conversion mistakes.

* Fixes #9524
* Some style cleanup

Signed-off-by: Jerome Duval <jerome.duval@gmail.com>